<resources>
    <string name="app_name" translatable="false">GPS Warning - BM</string>
    <string name="title_activity_ayuda">AyudaActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="txt_menu">Menu</string>
    <string name="txt_misRutas">Routes</string>
    <string name="txt_misAmigos">Friends</string>
    <string name="txt_configuracion">Settings</string>
    <string name="txt_ayuda">Help</string>
    <string name="txt_acercaDe">About</string>
    <string name="title_activity_todas_rutas">TodasRutasActivity</string>
    <string name="txt_agregarRuta">Set your new route</string>
    <string name="txt_nombreRuta">Route name</string>
    <string name="txt_origenRuta">Rute origen</string>
    <string name="txt_latitud">Latitude</string>
    <string name="txt_editar">Edit</string>
    <string name="txt_longitud">Longiud</string>
    <string name="txt_avisarAntesDe">Advise before:</string>
    <string name="txt_destinoRuta">To:</string>
    <string name="txt_aceptar">Accept</string>
    <string name="txt_cancelar">Cancel</string>
    <string name="txt_apagarEncender">Turn on/off</string>
    <string name="titulo_mens_salida">Go out?</string>
    <string name="mens_salida">All changes will be descarted.</string>
    <string name="txt_acceder">Sing in</string>
    <string name="txt_nombreUsuario">User Name</string>
    <string name="txt_correoUsuario">Email user</string>
    <string name="txt_contrasenaUsuario">Password</string>
    <string name="mens_acceder">Create your count or sign in to sync all routes</string>
    <string name="mens_tonoAlarma">Set your personalisablility tone alarm</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_anadeMarcadorInicio">Add begin</string>
    <string name="txt_anadeMarcadorFinal">Add finish</string>
    <string name="mens_camposIncompletos">Hey! Some dates are missed</string>
    <string name="txt_yaTengoCuenta">Do you have an account?</string>
    <string name="txt_iniciarSesion">Sign in</string>
    <string name="txt_cerrarSesion">Sing Out</string>
    <string name="txt_mens_cerrarCuenta">Drop all data and go out</string>
    <string name="txt_miCuenta">My Count</string>
    <string name="txt_crear">Create</string>
    <string name="txt_crearCuenta">Create acount</string>
    <string name="txt_restaurarContrasena">Forgot your Password?</string>
    <string name="txt_toqueAqui">Tap here</string>
    <string name="parar_actualizaciones">stop</string>
    <string name="iniciar_actualizaciones">begin</string>
    <string name="title_activity_maps_markers">Map</string>
    <string name="txt_rutaInicio">Begin route</string>
    <string name="txt_rutaFinal">Last marker</string>
    <string name="mens_loseta1">only drawer a marker finish, the marker begin is ready</string>
    <string name="mens_loseta2">You can sleep while us check your location</string>
    <string name="mens_loseta3">Make an account to sync all your routes</string>
    <string name="mens_loseta4">Shared your location with your friends</string>
    <string name="mens_gpsDesactivado">Hey! Turn on GPS</string>
    <string name="mens_marcadorInicioAgregado">Marker begin was added, draw it to set</string>
    <string name="app_ver">Ver. 1.0.0</string>
    <string name="app_devel">Blanca S. ft. Margarito R.</string>
    <string name="title_activity_amigos">AmigosActivity</string>
    <string name="txt_todosAmigos">All Friends, is coming</string>
    <string name="mens_rutaActivada">Route was set turn on</string>
    <string name="mens_alarmaEncendida">Alarm was set turn on</string>
    <string name="mens_datosGuardados">Dates saved!</string>
    <string name="mens_destinoAlcanzado">Hey! Your route is finishing!</string>
    <string name="txt_faltan">missing</string>
    <string name="mens_eligeRuta">Hey! First set your destine up</string>
    <string name="title_activity_map">Map</string>
    <string name="txt_tipoSatelite">Satellite</string>
    <string name="txt_tipoTerreno">Terrene</string>
    <string name="txt_tipoHibrido">Hybrid</string>
</resources>
