<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_misRutas"
            android:icon="@drawable/ic_mis_rutas"
            android:title="@string/txt_misRutas"
            android:orderInCategory="1"/>
        <item
            android:id="@+id/nav_misAmigos"
            android:icon="@drawable/ic_mis_amigos"
            android:title="@string/txt_misAmigos"
            android:orderInCategory="3"/>
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_configuracion"
            android:title="@string/txt_configuracion"
            android:orderInCategory="4"/>
        <item
            android:id="@+id/nav_ayudaYSugerencias"
            android:icon="@drawable/ic_ayuda"
            android:title="@string/txt_ayuda"
            android:orderInCategory="5"/>
        <item
            android:id="@+id/nav_acercaDe"
            android:icon="@drawable/ic_acerca_de"
            android:title="@string/txt_acercaDe"
            android:orderInCategory="6"/>
    </group>

</menu>
