<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/bt_tipoHibrido"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/txt_tipoHibrido" />

        <Button
            android:id="@+id/bt_tipoSatelite"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/bt_tipoHibrido"
            android:layout_alignBottom="@+id/bt_tipoHibrido"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_tipoSatelite" />

        <Button
            android:id="@+id/bt_tipoTerreno"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/bt_tipoHibrido"
            android:layout_alignBottom="@+id/bt_tipoHibrido"
            android:layout_alignParentStart="true"
            android:text="@string/txt_tipoTerreno" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">


        <Button
            android:id="@+id/bt_anadeMarcadorAceptar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_aceptar"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="11dp" />

        <Button
            android:id="@+id/bt_anadeMarcadorCancelar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_cancelar"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="13dp" />
    </RelativeLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true" />

</LinearLayout>
