<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.blancasoto.gpswarning_bm.AyudaActivity"
    tools:showIn="@layout/app_bar_ayuda"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/im_loseta1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/loseta_1" />

        <TextView
            android:id="@+id/tv_loseta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mens_loseta1"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/im_loseta2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/loseta_2" />

        <TextView
            android:id="@+id/tv_loseta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mens_loseta2"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/im_loseta3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/loseta_3" />

        <TextView
            android:id="@+id/tv_loseta3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mens_loseta3"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/im_loseta4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/loseta_4" />

        <TextView
            android:id="@+id/tv_loseta4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mens_loseta4"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
